@@ -17,7 +17,6 @@
 package com.echothree.control.user.warehouse.server.command;
 
 import com.echothree.control.user.warehouse.common.form.CreateLocationForm;
-import com.echothree.control.user.warehouse.common.result.CreateLocationResult;
 import com.echothree.control.user.warehouse.common.result.WarehouseResultFactory;
 import com.echothree.model.control.inventory.common.workflow.InventoryLocationGroupStatusConstants;
 import com.echothree.model.control.inventory.server.control.InventoryControl;
@@ -26,22 +25,12 @@ import com.echothree.model.control.security.common.SecurityRoleGroups;
 import com.echothree.model.control.security.common.SecurityRoles;
 import com.echothree.model.control.warehouse.common.workflow.LocationStatusConstants;
 import com.echothree.model.control.warehouse.server.control.WarehouseControl;
+import com.echothree.model.control.warehouse.server.logic.LocationLogic;
 import com.echothree.model.control.warehouse.server.logic.LocationUseTypeLogic;
 import com.echothree.model.control.workflow.server.control.WorkflowControl;
-import com.echothree.model.data.core.server.entity.EntityInstance;
-import com.echothree.model.data.inventory.server.entity.InventoryLocationGroup;
-import com.echothree.model.data.party.server.entity.Party;
 import com.echothree.model.data.user.common.pk.UserVisitPK;
-import com.echothree.model.data.warehouse.server.entity.Location;
-import com.echothree.model.data.warehouse.server.entity.LocationNameElement;
-import com.echothree.model.data.warehouse.server.entity.LocationNameElementDetail;
-import com.echothree.model.data.warehouse.server.entity.LocationType;
-import com.echothree.model.data.warehouse.server.entity.LocationUseType;
-import com.echothree.model.data.warehouse.server.entity.Warehouse;
-import com.echothree.model.data.workflow.server.entity.WorkflowEntityStatus;
 import com.echothree.util.common.command.BaseResult;
 import com.echothree.util.common.message.ExecutionErrors;
-import com.echothree.util.common.persistence.BasePK;
 import com.echothree.util.common.validation.FieldDefinition;
 import com.echothree.util.common.validation.FieldType;
 import com.echothree.util.server.control.BaseSimpleCommand;
@@ -49,13 +38,7 @@ import com.echothree.util.server.control.CommandSecurityDefinition;
 import com.echothree.util.server.control.PartyTypeDefinition;
 import com.echothree.util.server.control.SecurityRoleDefinition;
 import com.echothree.util.server.persistence.Session;
-import java.util.Arrays;
-import java.util.Collection;
-import java.util.Collections;
-import java.util.Iterator;
 import java.util.List;
-import java.util.regex.Matcher;
-import java.util.regex.Pattern;
 
 public class CreateLocationCommand
         extends BaseSimpleCommand<CreateLocationForm> {
@@ -71,7 +54,7 @@ public class CreateLocationCommand
                 ))
         ));
 
-        FORM_FIELD_DEFINITIONS = Collections.unmodifiableList(Arrays.asList(
+        FORM_FIELD_DEFINITIONS = List.of(
                 new FieldDefinition("WarehouseName", FieldType.ENTITY_NAME, true, null, null),
                 new FieldDefinition("LocationName", FieldType.ENTITY_NAME, true, null, null),
                 new FieldDefinition("LocationTypeName", FieldType.ENTITY_NAME, true, null, null),
@@ -79,7 +62,7 @@ public class CreateLocationCommand
                 new FieldDefinition("Velocity", FieldType.UNSIGNED_INTEGER, true, null, null),
                 new FieldDefinition("InventoryLocationGroupName", FieldType.ENTITY_NAME, true, null, null),
                 new FieldDefinition("Description", FieldType.STRING, false, 1L, 132L)
-                ));
+        );
     }
     
     /** Creates a new instance of CreateLocationCommand */
@@ -89,52 +72,24 @@ public class CreateLocationCommand
     
     @Override
     protected BaseResult execute() {
+        var result = WarehouseResultFactory.getCreateLocationResult();
         var warehouseControl = Session.getModelController(WarehouseControl.class);
-        CreateLocationResult result = WarehouseResultFactory.getCreateLocationResult();
-        String warehouseName = form.getWarehouseName();
-        Warehouse warehouse = warehouseControl.getWarehouseByName(warehouseName);
+        var warehouseName = form.getWarehouseName();
+        var warehouse = warehouseControl.getWarehouseByName(warehouseName);
         
         if(warehouse != null) {
-            Party warehouseParty = warehouse.getParty();
-            String locationName = form.getLocationName();
-            Location location = warehouseControl.getLocationByName(warehouseParty, locationName);
+            var warehouseParty = warehouse.getParty();
+            var locationName = form.getLocationName();
+            var location = warehouseControl.getLocationByName(warehouseParty, locationName);
             
             if(location == null) {
-                String locationTypeName = form.getLocationTypeName();
-                LocationType locationType = warehouseControl.getLocationTypeByName(warehouseParty, locationTypeName);
+                var locationTypeName = form.getLocationTypeName();
+                var locationType = warehouseControl.getLocationTypeByName(warehouseParty, locationTypeName);
                 
                 if(locationType != null) {
-                    Collection locationNameElements = warehouseControl.getLocationNameElementsByLocationType(locationType);
-                    int endIndex = 0;
-                    boolean validLocationName = true;
-                    
-                    for(Iterator iter = locationNameElements.iterator(); iter.hasNext() && validLocationName;) {
-                        LocationNameElement locationNameElement = (LocationNameElement)iter.next();
-                        LocationNameElementDetail locationNameElementDetail = locationNameElement.getLastDetail();
-                        String validationPattern = locationNameElementDetail.getValidationPattern();
-                        
-                        if(validationPattern != null) {
-                            try {
-                                Pattern pattern = Pattern.compile(validationPattern);
-                                int beginIndex = locationNameElementDetail.getOffset();
-                                
-                                endIndex = beginIndex + locationNameElementDetail.getLength();
-                                String substr = locationName.substring(beginIndex, endIndex);
-                                Matcher m = pattern.matcher(substr);
-                                
-                                if(!m.matches()) {
-                                    validLocationName = false;
-                                }
-                            } catch (IndexOutOfBoundsException ioobe) {
-                                validLocationName = false;
-                            }
-                        }
-                    }
-                    
-                    if(locationName.length() > endIndex)
-                        validLocationName = false;
-                    
-                    if(validLocationName) {
+                    LocationLogic.getInstance().validateLocationName(this, locationType, locationName);
+
+                    if(!hasExecutionErrors()) {
                         var locationUseTypeName = form.getLocationUseTypeName();
                         var locationUseType = LocationUseTypeLogic.getInstance().getLocationUseTypeByName(this, locationUseTypeName, null, false);
                         
@@ -148,31 +103,32 @@ public class CreateLocationCommand
                             
                             if(!multipleUseError) {
                                 var inventoryControl = Session.getModelController(InventoryControl.class);
-                                String inventoryLocationGroupName = form.getInventoryLocationGroupName();
-                                InventoryLocationGroup inventoryLocationGroup = inventoryControl.getInventoryLocationGroupByName(warehouseParty, inventoryLocationGroupName);
+                                var inventoryLocationGroupName = form.getInventoryLocationGroupName();
+                                var inventoryLocationGroup = inventoryControl.getInventoryLocationGroupByName(warehouseParty, inventoryLocationGroupName);
                                 
                                 if(inventoryLocationGroup != null) {
                                     var coreControl = getCoreControl();
-                                    Integer velocity = Integer.valueOf(form.getVelocity());
+                                    var velocity = Integer.valueOf(form.getVelocity());
                                     var workflowControl = Session.getModelController(WorkflowControl.class);
-                                    BasePK createdBy = getPartyPK();
+                                    var createdBy = getPartyPK();
                                     var description = form.getDescription();
                                     
                                     location = warehouseControl.createLocation(warehouseParty, locationName, locationType, locationUseType,
                                             velocity, inventoryLocationGroup, createdBy);
-                                    
-                                    EntityInstance entityInstance = coreControl.getEntityInstanceByBasePK(inventoryLocationGroup.getPrimaryKey());
-                                    WorkflowEntityStatus workflowEntityStatus = workflowControl.getWorkflowEntityStatusByEntityInstanceUsingNames(InventoryLocationGroupStatusConstants.Workflow_INVENTORY_LOCATION_GROUP_STATUS, entityInstance);
-                                    String workflowStepName = workflowEntityStatus.getWorkflowStep().getLastDetail().getWorkflowStepName();
-                                    String workflowEntranceName = null;
-                                    
-                                    if(workflowStepName.equals(InventoryLocationGroupStatusConstants.WorkflowStep_ACTIVE))
-                                        workflowEntranceName = LocationStatusConstants.WorkflowEntrance_NEW_LOCATION_ACTIVE;
-                                    else if(workflowStepName.equals(InventoryLocationGroupStatusConstants.WorkflowStep_INVENTORY_PREP))
-                                        workflowEntranceName = LocationStatusConstants.WorkflowEntrance_NEW_LOCATION_INVENTORY_PREP;
-                                    else if(workflowStepName.equals(InventoryLocationGroupStatusConstants.WorkflowStep_INVENTORY))
-                                        workflowEntranceName = LocationStatusConstants.WorkflowEntrance_NEW_LOCATION_INVENTORY;
-                                    
+
+                                    var entityInstance = coreControl.getEntityInstanceByBasePK(inventoryLocationGroup.getPrimaryKey());
+                                    var workflowEntityStatus = workflowControl.getWorkflowEntityStatusByEntityInstanceUsingNames(InventoryLocationGroupStatusConstants.Workflow_INVENTORY_LOCATION_GROUP_STATUS, entityInstance);
+                                    var workflowStepName = workflowEntityStatus.getWorkflowStep().getLastDetail().getWorkflowStepName();
+                                    var workflowEntranceName = switch(workflowStepName) {
+                                        case InventoryLocationGroupStatusConstants.WorkflowStep_ACTIVE ->
+                                                LocationStatusConstants.WorkflowEntrance_NEW_LOCATION_ACTIVE;
+                                        case InventoryLocationGroupStatusConstants.WorkflowStep_INVENTORY_PREP ->
+                                                LocationStatusConstants.WorkflowEntrance_NEW_LOCATION_INVENTORY_PREP;
+                                        case InventoryLocationGroupStatusConstants.WorkflowStep_INVENTORY ->
+                                                LocationStatusConstants.WorkflowEntrance_NEW_LOCATION_INVENTORY;
+                                        default -> null;
+                                    };
+
                                     entityInstance = coreControl.getEntityInstanceByBasePK(location.getPrimaryKey());
                                     workflowControl.addEntityToWorkflowUsingNames(null, LocationStatusConstants.Workflow_LOCATION_STATUS, workflowEntranceName, entityInstance, null, null, createdBy);
                                     
@@ -186,8 +142,6 @@ public class CreateLocationCommand
                                 addExecutionError(ExecutionErrors.MultipleLocationUseTypesNotAllowed.name());
                             }
                         }
-                    } else {
-                        addExecutionError(ExecutionErrors.InvalidLocationName.name(), locationName);
                     }
                 } else {
                     addExecutionError(ExecutionErrors.UnknownLocationTypeName.name(), locationTypeName);
@@ -198,6 +152,7 @@ public class CreateLocationCommand
             
             if(location != null) {
                 result.setEntityRef(location.getPrimaryKey().getEntityRef());
+                result.setWarehouseName(warehouse.getWarehouseName());
                 result.setLocationName(location.getLastDetail().getLocationName());
             }
         } else {
@@ -206,5 +161,5 @@ public class CreateLocationCommand
         
         return result;
     }
-    
+
 }
